using a distributed cache: Hazelcast

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=rps-game
+#logging.level.reactor.netty.http=DEBUG
+#logging.level.reactor.netty.http.server=DEBUG
+#logging.level.reactor.netty.http.client=DEBUG
+game.map.name=gameEvents
