hazelcast EntryProcessor approach

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.application.name=rps-game
 #logging.level.reactor.netty.http.server=DEBUG
 #logging.level.reactor.netty.http.client=DEBUG
 game.map.name=gameEvents
+management.endpoints.web.exposure.include=health,info,metrics
