--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -6,8 +6,19 @@ http {
 
     access_log /dev/null;
 
+    map $request_method $backend {
+      default backend;
+      "~*^POST$" backend_ramdom;
+    }
+
+    upstream backend_ramdom {
+        server app1:8080;
+        server app2:8080;
+        server app3:8080;
+    }
+
     upstream backend {
-        random two least_conn;
+        hash $request_uri consistent;
         server app1:8080;
         server app2:8080;
         server app3:8080;
@@ -16,8 +27,12 @@ http {
     server {
         listen 80;
 
-        location / {
-            proxy_pass http://backend;
-        }
+      location ~* ^/games/([A-Za-z0-9_-]+)/plays$ {
+          proxy_pass http://backend;
+      }
+
+      location ~* ^/games {
+          proxy_pass http://$backend;
+      }
     }
 }
