--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: nginx:latest
     container_name: nginx
     ports:
-      - "9999:80"  # Change here: Host port 9999 maps to container port 80
+      - "9999:80"
     volumes:
       - "./etc/nginx/nginx.conf:/etc/nginx/nginx.conf:ro"
     depends_on:
@@ -58,3 +58,6 @@ services:
 #networks:
 #  hazelcast-network:
 #    driver: bridge
+
+#  hazelcast:
+#    image: hazelcast/hazelcast:latest
