--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -6,19 +6,9 @@ http {
 
     access_log /dev/null;
 
-    map $request_method $backend {
-      default backend;
-      "~*^POST$" backend_ramdom;
-    }
-
-    upstream backend_ramdom {
-        server app1:8080;
-        server app2:8080;
-        server app3:8080;
-    }
-
     upstream backend {
-        hash $request_uri consistent;
+#         random two least_conn;
+#         hash $request_uri;
         server app1:8080;
         server app2:8080;
         server app3:8080;
@@ -27,12 +17,10 @@ http {
     server {
         listen 80;
 
-      location ~* ^/games/([A-Za-z0-9_-]+)/plays$ {
-          proxy_pass http://backend;
-      }
-
-      location ~* ^/games {
-          proxy_pass http://$backend;
-      }
+        location / {
+            proxy_pass http://backend;
+            proxy_next_upstream error timeout http_500 http_502 http_503 http_504;
+            proxy_next_upstream_tries 3;
+        }
     }
 }
