--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,19 @@ services:
       - app1
       - app2
       - app3
+    deploy:
+      resources:
+        limits:
+          cpus: '2'
+          memory: 2024M
 
   app1:
     image: rps-game
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 1024M
     #    ports:
     #      - "8081:8080"
     environment:
@@ -21,6 +31,11 @@ services:
 
   app2:
     image: rps-game
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 1024M
     #    ports:
     #      - "8082:8080"
     environment:
@@ -28,6 +43,11 @@ services:
 
   app3:
     image: rps-game
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 1024M
     #    ports:
     #      - "8083:8080"
     environment:
